@@ -1,4 +1,4 @@
-#!/usr/bin/env python
+#!@@python@@
 # This is just a wrapper script for the main Python program
 # This script is part of Rubber, which is covered by the GPL license.
 # (c) Emmanuel Beffara, 2002
